--- a/main.css
+++ b/main.css
@@ -1,12 +1,41 @@
 .container {
-  font-family: Arial, sans-serif;
+  font-size: 62.5%;
   width: 283px;
   height: 354px;
 }
+/*
+.calculator {
+  font-family: Arial, sans-serif;
+  color: white;
+  font-size: 2em;
+}*/
 
-span {
+.top button.clear {
+  height: 72px;
+  width: 70px;
+  float: left;
+  /*overflow: hidden;*/
+}
+
+.view {
+  width: 208px;
+  height: 70px;
+  background-color: #65B357;
+  border: 1px solid #B6DBB2;
+  margin-left: 70px;
+}
+
+button {
+  clear: right;
   background-color: #65B357;
   height: 70px;
   width: 70px;
-  border: 1px solid #85C279;
+  border: 1px solid #B6DBB2;
+  margin: 0;
+  float:left;
 }
+
+.operator {
+  background-color: #83C178;
+}
+
