--- a/main.css
+++ b/main.css
@@ -19,6 +19,10 @@ button {
   cursor: pointer;
 }
 
+button:focus {
+  outline: 0;
+}
+
 button:hover {
   background-color: #83C178;
   color: black;
